fixed clipping issue

--- a/src/css/gameboard.styl
+++ b/src/css/gameboard.styl
@@ -936,6 +936,8 @@
                 flex(1)
                 margin: 0
                 min-height: 20px
+                overflow-x:clip
+                overflow-y:auto
 
                 >div
                     animation: fadein 0.5s
